add:input username&pasword resolving
